# pm-scout

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  MIGRATION_NOTES.md  Makefile  README.md  build_template.js  fill_resume.js  nixpacks.toml  package-lock.json  package.json  render.yaml  test-job.html
ats_bullet_selector/: .gitignore  master_resume.json  nixpacks.toml  pyproject.toml  requirements.txt  server.py
ats_bullet_selector/data/: synonyms.yaml
ats_bullet_selector/src/ats_bullet_selector/: __init__.py  assign.py  classify.py  cli.py  config.py  db.py  embed_voyage.py  judge.py  keyword_carry.py  map_lookup.py  models.py  normalize.py  report.py  resolve.py  retrieve.py  role_profile.py  score.py
ats_bullet_selector/src/ats_bullet_selector/prompts/: judge_v1.md
ats_bullet_selector/src/ats_bullet_selector/scripts/: regen_qualification_map.py  validate.py
ats_bullet_selector/tests/: conftest.py  test_assign.py  test_classify.py  test_e2e.py  test_embed_voyage.py  test_keyword_coverage.py  test_normalize.py  test_resolve.py  test_retrieve.py  test_role_profile.py  test_score.py
ats_bullet_selector/tests/validation/: README.md  triples.jsonl
config/: Resume_Template.docx  ats_research.md  ats_routing.json  insight_sources.json  master_resume.json  master_resume_swe.json  supabase_schema.sql  targets.json
docs/: Qualification_match.md  Resume_Evalutation_ATS_Systems.md  UI.md  all_companies_scrape_results.md  architecture.md  custom-playwright-adapter.md  custom_playwright_results.md  fit-smoke-test.md  former_manual_scrape_results.md  (+6 more)
(+234 files in other folders)
